# book-management

./: .env  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 11376a92d41b_init.py  4b1a3b10e4ab_add_role_to_user.py  51b0bdaa8422_add_role_to_the_new_user.py  c9c72bff0c49_exclude_password.py
src/: __init__.py  config.py  lifespan.py
src/auth/: dependencies.py  models.py  routes.py  schemas.py  service.py  utils.py
src/books/: __init__.py  models.py  routes.py  schemas.py  service.py
src/db/: __init__.py  database.py  redis.py
